syntax = "proto3";

package clientelogistica;

service ClienteLogistica{
    rpc HacerPedido(Pedido) returns (Seguimiento) {}
    rpc SolicitarEstado(Seguimiento) returns (Estado) {}
}

message Pedido{
    string IDPedido=1;
    string NombreProducto=2;
    int32 ValorProducto=3;
    string Tipo=4;//retail, normal (pyme), prioritario (pyme)
    string Destino=5;
    string Origen=6;
}

message Seguimiento{
    int64 CodigoSeguimiento=1;
}

message Estado{
    string Estado=1;
}
